--- a/src/pages/details-ingredient/details-ingredient.html
+++ b/src/pages/details-ingredient/details-ingredient.html
@@ -60,5 +60,5 @@
           Indeholder allergener</span></div>
     </ion-item>
   </ion-list>
-  <ion-item *ngIf="ingredient?.AllergenInfo" >{{ingredient?.AllergenInfo}}</ion-item><!--TODO: style this block-->
+  <ion-item *ngIf="ingredient?.AllergenInfo" >{{ingredient.AllergenInfo}}</ion-item><!--TODO: style this block-->
 </ion-content>
