--- a/src/pages/modal-order-complete/modal-order-complete.html
+++ b/src/pages/modal-order-complete/modal-order-complete.html
@@ -5,18 +5,12 @@
   Ionic pages and navigation.
 -->
 
-<ion-header>
+<ion-content class="content" padding no-bounce>
 
-  <ion-navbar>
-    <ion-title></ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-<ion-content class="content" padding>
-
-  <p>Din bestilling er gået igennem.</p>
-  <button ion-button full (click)="goToAccount()">Gå til mine leveringer</button>
-  <button ion-button full (click)="dismiss()" color="secondary">Luk</button>
+  <div class="box">
+    <p>Din bestilling er gået igennem.</p>
+    <button ion-button full (click)="goToAccount()">Gå til mine leveringer</button>
+    <button ion-button full (click)="dismiss()" color="secondary">Luk</button>
+  </div>
 
 </ion-content>
