--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -49,7 +49,7 @@
           <h5>{{subscription.Title}}</h5>
           <p *ngIf="subscription.Description" >{{subscription.Description}}</p>
         </ion-label>
-        <ion-toggle [(ngModel)]="subscription.Subscribed"></ion-toggle>
+        <ion-toggle [(ngModel)]="subscription.Subscribed" (ionChange)="setPushMessage(subscription.Type, subscription.Subscribed)"></ion-toggle>
       </ion-item>
     </ion-list>
   </div>
